# hamonikr-albert

./: CMakeLists.txt  HOWTO-BUILD-on-HamoniKR  PKGBUILD  README.md  a.conf
.docker/: arch.Dockerfile  ubuntu.2404.Dockerfile
.github/workflows/: ci.yml
debian/: albert.gsettings-override  changelog  control  postinst  rules
hamonikr/: BUILD-FROM-UPSTREAM.txt  albert.desktop
hamonikr/etc/skel/.config/: albert.conf
hamonikr/etc/xdg/autostart/: albert-autostart.desktop  albert.desktop
i18n/: README.md  albert_ko.ts  albert_ko.ts.backup
plugins/: CMakeLists.txt
plugins/applications/src/: extension.cpp
plugins/applications_macos/: metadata.json
plugins/applications_xdg/: metadata.json
plugins/applications_xdg/src/: plugin.cpp
plugins/calculator_qalculate/: metadata.json
plugins/docs/: metadata.json
plugins/openai/: CMakeLists.txt  metadata.json  openai.qrc
plugins/openai/src/: extension.cpp  extension.cpp_v1  extension.cpp_v2  extension.h
plugins/qmlboxmodel/src/: configwidget.h
plugins/system/: metadata.json
plugins/websearch/: CMakeLists.txt  websearch.qrc
plugins/websearch/resources/: engines.json
plugins/websearch/src/: extension.cpp
plugins/widgetboxmodel/share/themes/: HamoniKR_Dark.qss  (+3 more)
plugins/widgetboxmodel/src/: frontendwidget.cpp
plugins/widgetsboxmodel/src/: inputline.cpp  inputline.h
plugins/widgetsboxmodel/themes/: HamoniKR Dark.qss  HamoniKR Light.qss  Spotlight Dark.qss
resources/: albert.desktop
src/: app.cpp  report.cpp  telemetry.cpp  trayicon.cpp
src/app/: main.cpp
src/settings/: settingswindow.ui
(+5 files in other folders)
